Fix routes for filtering